# johnys-pf2e-qol

./: .gitignore  README.md  module.json
.github/workflows/: release.yml
module-src/: Cargo.toml
module-src/src/: foundry.rs  lib.rs
module-src/src/features/: auto_popout.rs  equipment_observation.rs  mod.rs
module-src/src/foundry/: error.rs  macros.rs  mod.rs
scripts/: main.mjs
styles/: style.css
templates/: equipment-screen.hbs
