[package]
name = "johnys-module"
version = "0.1.1"
authors = ["johnyburd <jonathan@johnyburd.com>"]
description = "A simple foundry module with wasm-pack"
edition = "2021"
license = "MIT"
keywords = ["foundry", "vtt"]
repository = "https://github.com/johnyburd/johnys-pf2e-qol"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.68"
wasm-bindgen-futures = "0.4"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }